# agentic-arena

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  TODO_IMPROVEMENTS.md  arena-run-summary.md  arena-run-summary2.md  arena-run-summary3.md  execution-plan.md  execution-plan2.md  pixi.toml  proposal.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  pypi.yaml
arena/: __init__.py  __main__.py  api.py  extraction.py  git.py  orchestrator.py  phases.py  prompts.py  state.py
arena/conversations/: gpt.json
arenas/0004/: 00-1-solve-agent_a-analysis.md  00-1-solve-agent_a-solution.md  00-1-solve-agent_b-analysis.md  00-1-solve-agent_b-solution.md  00-1-solve-agent_c-analysis.md  00-1-solve-agent_c-solution.md  00-2-evaluate-agent_a-critique.md  00-2-evaluate-agent_a-verdict.json  00-2-evaluate-agent_b-critique.md  00-2-evaluate-agent_b-verdict.json  00-2-evaluate-agent_c-critique.md  00-2-evaluate-agent_c-verdict.json  00-3-revise-agent_a-analysis.md  00-3-revise-agent_a-solution.md  00-3-revise-agent_b-analysis.md  00-3-revise-agent_b-solution.md  00-3-revise-agent_c-analysis.md  00-3-revise-agent_c-solution.md  01-2-evaluate-agent_a-critique.md  01-2-evaluate-agent_a-verdict.json  01-2-evaluate-agent_b-critique.md  01-2-evaluate-agent_b-verdict.json  01-2-evaluate-agent_c-critique.md  01-2-evaluate-agent_c-verdict.json  01-3-revise-agent_a-analysis.md  01-3-revise-agent_a-solution.md  01-3-revise-agent_b-analysis.md  01-3-revise-agent_b-solution.md  01-3-revise-agent_c-analysis.md  01-3-revise-agent_c-solution.md  02-2-evaluate-agent_a-critique.md  02-2-evaluate-agent_a-verdict.json  02-2-evaluate-agent_b-critique.md  (+15 more)
tests/: test_api.py  test_cli.py  test_extraction.py  test_git.py  test_integration.py  test_orchestrator.py  test_phases.py  test_prompts.py  test_state.py
(+12 files in other folders)
