[project]
name = "agentic-arena"
version = "0.1.0"
description = "Multi-model consensus via Cursor Cloud Agents"
authors = [{ name = "Ben Mares", email = "services-agentic-arena@tensorial.com" }]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5,<3",
    "typer>=0.21.1,<0.22",
    "pydantic>=2.12.5,<3",
    "python-dotenv>=1.2.1,<2",
    "ruamel.yaml>=0.18,<0.19",
]

[project.scripts]
arena = "arena.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["arena"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
