[project]
name = "agentic-arena"
dynamic = ["version"]
description = "Multi-model consensus via Cursor Cloud Agents"
authors = [{ name = "Ben Mares", email = "services-agentic-arena@tensorial.com" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.32.5,<3",
    "typer>=0.21.1,<0.22",
    "pydantic>=2.12.5,<3",
    "python-dotenv>=1.2.1,<2",
    "ruamel.yaml>=0.18,<0.19",
]

[project.scripts]
arena = "arena.__main__:app"

[project.urls]
Homepage = "https://github.com/maresb/agentic-arena"
Repository = "https://github.com/maresb/agentic-arena"
"Issue Tracker" = "https://github.com/maresb/agentic-arena/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "arena/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["arena"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
